--- a/css/app.css
+++ b/css/app.css
@@ -1,14 +1,11 @@
 body{
   background-color: #e74c3c;
   color: #ecf0f1;
+  font-family: 'Lato', sans-serif;
 }
 
 .header-container{
   margin-top: 100px;
-}
-
-.header-content{
-
 }
 
 .button-group{
