--- a/css/foundation.css
+++ b/css/foundation.css
@@ -11,7 +11,7 @@
    *    without disabling user zoom.
    */
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family:sans-serif;
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
@@ -375,7 +375,6 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
   color: #0a0a0a;
@@ -475,7 +474,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: inherit;
